# rnnoise

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  rnnoise_demo.cpp
include/rnnoise/: rnnoise.h
src/: CMakeLists.txt  celt_lpc.c  denoise.c  pitch.c
